# routes/auth_user.routes.js
@@ -1,7 +1,7 @@
 'use strict';
 
 // Importing required modules.
-const userMiddleware = require ('../middlewares/user.middleware');
+const userMiddleware = require('../middlewares/user.middleware');
 const authUserController = require('../controllers/auth_user.controller');
 const customMiddleware = require('../helpers/access-token');
 
@@ -23,7 +23,7 @@ app.use(app.oauth.errorHandler());
  * Routes for the auth.                             *
  ****************************************************/
 authRoutes.post('/register', userMiddleware.encryptPassword, userMiddleware.checkUserAlreadyExist, authUserController.register);
-authRoutes.post('/login',customMiddleware.setScope, app.oauth.grant());
+authRoutes.post('/login', customMiddleware.setScope, app.oauth.grant());
 
 // Exporting auth user routes.
 module.exports = authRoutes;
